# ScreenCutTool

./: CMakeLists.txt  README.md  app_icon.qrc  main.cpp  main_window.cpp  main_window.h  screen_widget.cpp  screen_widget.h  screenwidget.h
